# acts

Examples/Detectors/: CMakeLists.txt
Examples/Detectors/ATLASMockupCalorimeter/: CMakeLists.txt
Examples/Detectors/ATLASMockupCalorimeter/include/ActsExamples/ATLASMockupCalorimeter/: MockupCalorimeter.hpp
Examples/Detectors/ATLASMockupCalorimeter/src/: MockupCalorimeter.cpp
Examples/Python/: CMakeLists.txt
Examples/Python/src/: Detector.cpp
Examples/Scripts/Python/: augment_blueprint_itk_calorimeter.py
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Core/Detector/: CMakeLists.txt  PFlowATLASCaloBarrelCylinderBuilderTests.cpp  PFlowSurfaces.cpp  PFlowVolumeBuilderTests.cpp
